# rust_project_template

./: .gitignore  Cargo.toml  Cargo.toml.liquid  README.md  cargo-generate.toml  test-template.sh
benches/: bench.rs
config/: base.json  base.toml  base.yaml  log4rs.yaml
src/: config.rs  error.rs  lib.rs  lib.rs.liquid  main.rs  metrics.rs  prelude.rs  settings.rs  telemetry.rs
src/cmd/: command.rs
src/optional/: cli.rs.liquid  config.rs.liquid  log.rs.liquid  mod.rs.liquid
tests/: base.rs
