[package]
name = "zero2one"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
log4rs = "1.3.0"
serde_yaml = "0.9.33"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
clap = { version = "4.5.30", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.96"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
